fix: chip white space prevent breaking

--- a/packages/components/chip/src/styles/index.module.scss
+++ b/packages/components/chip/src/styles/index.module.scss
@@ -13,6 +13,7 @@
   font-weight: 700;
   display: inline-flex;
   border-radius: 8px;
+  white-space: nowrap;
 }
 
 @each $key, $props in $chip-styles {
